Anand Kulkarni - 22/09/2018 - Added unit test and some regression test example with logging using boost unit test framework.

--- a/sorting/src/CMakeLists.txt
+++ b/sorting/src/CMakeLists.txt
@@ -12,7 +12,16 @@ add_executable(testMain.out testMain.cpp)
 target_link_libraries(testMain.out SortUtils)
 
 # Add the unit Tests using the Boost Test Framework.
-add_executable(BoostTests.out BoostTests.cpp)
-target_include_directories(BoostTests.out PRIVATE "${PWD}")
-target_compile_options(BoostTests.out PRIVATE "-DBOOST_TEST_DYN_LINK")
-target_link_libraries(BoostTests.out boost_unit_test_framework SortUtils)
+add_executable(BoostUnitTests.out BoostUnitTests.cpp)
+target_include_directories(BoostUnitTests.out PRIVATE "${PWD}")
+target_compile_options(BoostUnitTests.out PRIVATE "-DBOOST_TEST_DYN_LINK")
+target_link_libraries(BoostUnitTests.out boost_unit_test_framework SortUtils)
+
+
+# Add the Performance Test using the Boost Test Framework.
+add_executable(BoostPerfTests.out BoostPerfTests.cpp)
+target_include_directories(BoostPerfTests.out PRIVATE "${PWD}")
+target_compile_options(BoostPerfTests.out PRIVATE "-DBOOST_TEST_DYN_LINK")
+target_link_libraries(BoostPerfTests.out boost_unit_test_framework SortUtils)
+
+
